# flx4control

./: .gitignore  README.md  generate_icon.py  install.bat  install.ps1  install.sh  main.py  pyproject.toml  uninstall.bat  uninstall.sh
flx4control/: __init__.py  audio_player.py  config.py  controller_bridge.py  gui.py  mic_loopback.py  system_control.py
