[project]
name = "flx4control"
version = "1.0.0"
description = "Control your PC with a Pioneer DDJ-FLX4 as a Stream Deck"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "flx4py @ git+https://github.com/TRC-Loop/flx4py.git",
    "mido>=1.3.3,<2.0.0",
    "python-rtmidi>=1.5.8",
    "pygame>=2.0",
    "pyautogui",
    "pynput",
    "sounddevice",
    "pycaw; sys_platform == 'win32'",
    "comtypes; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flx4control"]
